[package]
name = "aa-proxy-wican"
version = "0.2.0"
edition = "2021"

[dependencies]
tokio = { version = "1.47", features = ["full"] }
bluer = { version = "0.17", features = ["full"] }
anyhow = "1.0"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.13", default-features = false, features = ["json"] }
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
simplelog = "0.12"
